# sam-os

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: db.py  gym_router.py  main.py  meals_router.py  requirements.txt  schedule_lib.py  schedule_router.py
backup/: backup.py  pg_schema.sql  requirements.txt
docker/: Dockerfile  Dockerfile.api  docker-compose.yml
docs/: api.md  architecture.md  data-model.md  deployment.md  tools.md
hermes/: mcp.json
samos/: __init__.py  backup.py  calendar.py  db.py  graph.py  gym.py  insights.py  meals.py  productivity.py  registry.py  schedule.py  server.py  setup.py  wellness.py
samos/modules/: __init__.py
samos/modules/agent/: __init__.py  models.py  tools.py
samos/modules/email/: __init__.py  models.py  tools.py
samos/modules/fitness/: __init__.py  models.py  tools.py
scripts/: apple_calendar.py  conflict-detector.py  eod-sweep.py  gen_api_docs.py  gym-check.py  instantiate-today.py  meal_log.py  purge_viking_noise.py  schedule.py  schedule_lib.py  setup.py  sunday-review.py  workout.py
scripts/sql/: 000_base.sql  001_today_instances.sql  002_nutrition.sql  004_gym.sql  005_wellness.sql  006_productivity.sql  007_meal_templates.sql  008_backup_status.sql
tests/: conftest.py  test_agent_e2e.py  test_conflict_e2e.py  test_context_modules_e2e.py  test_email_weather_e2e.py  test_errors.py  test_graph_store.py  test_gym_e2e.py  test_meals_e2e.py  test_new_features_e2e.py  test_schedule_e2e.py  test_setup_e2e.py  test_smoke.py
(+44 files in other folders)
