[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sam-os"
version = "2.0.0"
description = "Personal OS — schedule, gym, nutrition tracking via MCP"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "pydantic>=2.10",
    "apscheduler>=3.10.4",
    "psycopg2-binary>=2.9.10",
    "caldav>=1.3",
    "icalendar>=5.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["samos*"]

[project.scripts]
samos-server = "samos.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
